// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Search should show cross icon when input value exists 1`] = `
<Search
  placeholder=""
  value=""
>
  <div>
    <Input
      disabled={false}
      onChange={[Function]}
      placeholder=""
      readOnly={false}
      showLengthInfo={true}
      showPasswordEye={false}
      type="text"
      underline={true}
      value=""
    >
      <span
        className="c7n-input-wrapper"
      >
        <div
          className="c7n-input-content"
        >
          <div
            className="c7n-input-rendered-wrapper"
          >
            <div
              className="c7n-input-rendered"
            >
              <div
                className="c7n-input-placeholder"
              />
              <input
                className="c7n-input"
                disabled={false}
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                onInput={[Function]}
                onKeyDown={[Function]}
                readOnly={false}
                type="text"
                value=""
              />
            </div>
          </div>
        </div>
        <div
          className="c7n-input-underline"
        >
          <span
            className="c7n-input-ripple"
          />
        </div>
      </span>
    </Input>
    <span
      className="undefined-action"
    >
      <Icon
        type="search"
      >
        <i
          className="icon icon-search"
        />
      </Icon>
    </span>
  </div>
</Search>
`;

exports[`Search should show cross icon when input value exists 2`] = `
<Search
  placeholder=""
  value="a"
>
  <div>
    <Input
      disabled={false}
      onChange={[Function]}
      placeholder=""
      readOnly={false}
      showLengthInfo={true}
      showPasswordEye={false}
      type="text"
      underline={true}
      value="a"
    >
      <span
        className="c7n-input-wrapper c7n-input-has-value"
      >
        <div
          className="c7n-input-content"
        >
          <div
            className="c7n-input-rendered-wrapper"
          >
            <div
              className="c7n-input-rendered"
            >
              <div
                className="c7n-input-placeholder"
              />
              <input
                className="c7n-input"
                disabled={false}
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                onInput={[Function]}
                onKeyDown={[Function]}
                readOnly={false}
                type="text"
                value="a"
              />
            </div>
          </div>
        </div>
        <div
          className="c7n-input-underline"
        >
          <span
            className="c7n-input-ripple"
          />
        </div>
      </span>
    </Input>
    <a
      className="undefined-action"
      href="#"
      onClick={[Function]}
    >
      <Icon
        type="cross-circle"
      >
        <i
          className="icon icon-cross-circle"
        />
      </Icon>
    </a>
  </div>
</Search>
`;
